[gd_scene load_steps=18 format=4 uid="uid://cm887vlgeq6qb"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_1bx51"]
[ext_resource type="Texture2D" uid="uid://db8n70f4bcue0" path="res://graphics/ground/stones.png" id="2_1dfa8"]
[ext_resource type="PackedScene" uid="uid://butb36u4opfd5" path="res://steam_vent.tscn" id="3_1ekgg"]
[ext_resource type="Texture2D" uid="uid://db2nwjvy2st02" path="res://graphics/decals/dirt_patch.png" id="3_swlmj"]
[ext_resource type="PackedScene" uid="uid://bae3epp02y4uu" path="res://gate.tscn" id="3_u66c0"]
[ext_resource type="PackedScene" uid="uid://x1afb0ualkws" path="res://scenes/levels/Player.tscn" id="4_aemo4"]
[ext_resource type="Texture2D" uid="uid://dprigfysh2fdr" path="res://graphics/decals/moss/moss_1.png" id="4_rlb86"]
[ext_resource type="Texture2D" uid="uid://bkhq3c0padlon" path="res://graphics/decals/moss/moss_2.png" id="5_31d4w"]
[ext_resource type="Texture2D" uid="uid://bgbrdvoeq03fh" path="res://graphics/decals/moss/moss_3.png" id="6_40xmi"]
[ext_resource type="Texture2D" uid="uid://ddhvkjcj2ylol" path="res://graphics/decals/moss/moss_4.png" id="7_go35h"]
[ext_resource type="Texture2D" uid="uid://cw63yj6lhhmay" path="res://graphics/decals/moss/moss_5.png" id="8_ir2i4"]
[ext_resource type="Texture2D" uid="uid://b4tw7ssueuk3e" path="res://graphics/tilesets/outside_walls.png" id="9_odkyo"]
[ext_resource type="Texture2D" uid="uid://7jrg5piu12t7" path="res://graphics/tilesets/soil.png" id="10_w1adm"]
[ext_resource type="PackedScene" uid="uid://b1a2d7r3udlwi" path="res://scenes/items/house.tscn" id="11_ifkjs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_30shk"]
resource_name = "walls"
texture = ExtResource("9_odkyo")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_506q2"]
resource_name = "soil"
texture = ExtResource("10_w1adm")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_m46y1"]
tile_size = Vector2i(390, 390)
sources/0 = SubResource("TileSetAtlasSource_30shk")
sources/1 = SubResource("TileSetAtlasSource_506q2")

[node name="Level" type="Node2D"]
script = ExtResource("1_1bx51")

[node name="Ground" type="Node2D" parent="."]

[node name="Soil" type="Sprite2D" parent="Ground"]
texture_repeat = 2
position = Vector2(404, 809)
texture = ExtResource("2_1dfa8")
region_enabled = true
region_rect = Rect2(-7138.56, -5971.25, 15223.6, 14251.1)

[node name="SteamVent" parent="Ground/Soil" instance=ExtResource("3_1ekgg")]
position = Vector2(502, -283)

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(0.672266, 0.821266, 1.54018e-06, 0.537255)
position = Vector2(1095, 348)
texture = ExtResource("3_swlmj")

[node name="Moss1" type="Sprite2D" parent="Ground"]
position = Vector2(-295, 1421)
texture = ExtResource("4_rlb86")

[node name="Moss2" type="Sprite2D" parent="Ground"]
position = Vector2(394, 782)
texture = ExtResource("5_31d4w")

[node name="Moss3" type="Sprite2D" parent="Ground"]
position = Vector2(978, 1748)
texture = ExtResource("6_40xmi")

[node name="Moss4" type="Sprite2D" parent="Ground"]
position = Vector2(232, 1024)
texture = ExtResource("7_go35h")

[node name="Moss5" type="Sprite2D" parent="Ground"]
position = Vector2(-444, 2100)
texture = ExtResource("8_ir2i4")

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_m46y1")
format = 2

[node name="soil" type="TileMapLayer" parent="Ground/TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD9/wIAAQACAAEAAAD9/wMAAQACAAEAAAD9/wEAAQACAAEAAAD9/wAAAQACAAEAAAD9////AQACAAEAAAD9//7/AQACAAEAAAD9//3/AQACAAEAAAD7/wUAAQABAAEAAAD7/wYAAQACAAEAAAD7/wcAAQACAAEAAAD7/wgAAQACAAEAAAD7/wkAAQABAAAAAAD8/wkAAQABAAAAAAD9/wkAAQABAAAAAAD+/wkAAQABAAAAAAD//wkAAQABAAAAAAAAAAkAAQABAAAAAAABAAkAAQABAAAAAAACAAkAAQABAAAAAAADAAkAAQABAAAAAAAEAAkAAQABAAAAAAAFAAkAAQABAAAAAAAGAAkAAQABAAAAAAAHAAkAAQABAAAAAAAIAAkAAQABAAAAAAAJAAkAAQABAAAAAAAKAAkAAQAAAAEAAAALAAkAAQABAAAAAAAKAAgAAQAAAAEAAAAKAAcAAQAAAAEAAAAKAAYAAQAAAAEAAAAKAAUAAQAAAAEAAAALAAQAAQABAAEAAAALAAMAAQABAAEAAAAKAAQAAQAAAAEAAAAKAAMAAQAAAAEAAAAKAAIAAQAAAAEAAAAKAAEAAQAAAAEAAAAKAAAAAQAAAAEAAAAKAP//AQAAAAEAAAAKAP7/AQAAAAEAAAAKAP3/AQAAAAEAAAAKAPz/AQAAAAEAAAAKAPv/AQAAAAEAAAAKAPr/AQABAAIAAAAKAPn/AQABAAIAAAAJAPr/AQABAAIAAAAIAPr/AQABAAIAAAAHAPr/AQABAAIAAAAGAPr/AQABAAIAAAAFAPr/AQABAAIAAAAEAPr/AQABAAIAAAADAPr/AQABAAIAAAACAPr/AQABAAIAAAABAPr/AQABAAIAAAD1//b/AQABAAEAAAD1//f/AQABAAEAAAD1//j/AQABAAEAAAD1//n/AQABAAEAAAD1//r/AQABAAEAAAD1//v/AQABAAEAAAD1//z/AQABAAEAAAD1//3/AQABAAEAAAD1//7/AQABAAEAAAD1////AQABAAEAAAD1/wAAAQABAAEAAAD1/wEAAQABAAEAAAD1/wIAAQABAAEAAAD1/wMAAQABAAEAAAD1/wQAAQABAAEAAAD2//b/AQABAAEAAAD2//f/AQABAAEAAAD2//j/AQABAAEAAAD2//n/AQABAAEAAAD2//r/AQABAAEAAAD2//v/AQABAAEAAAD2//z/AQABAAEAAAD2//3/AQABAAEAAAD2//7/AQABAAEAAAD2////AQABAAEAAAD2/wAAAQABAAEAAAD2/wEAAQABAAEAAAD2/wIAAQABAAEAAAD2/wMAAQABAAEAAAD2/wQAAQABAAEAAAD3//b/AQABAAEAAAD3//f/AQABAAEAAAD3//j/AQABAAEAAAD3//n/AQABAAEAAAD3//r/AQABAAEAAAD3//v/AQABAAEAAAD3//z/AQABAAEAAAD3//3/AQABAAEAAAD3//7/AQABAAEAAAD3////AQABAAEAAAD3/wAAAQABAAEAAAD3/wEAAQABAAEAAAD3/wIAAQABAAEAAAD3/wMAAQABAAEAAAD3/wQAAQABAAEAAAD4//b/AQABAAEAAAD4//f/AQABAAEAAAD4//j/AQABAAEAAAD4//n/AQABAAEAAAD4//r/AQABAAEAAAD4//v/AQABAAEAAAD4//z/AQABAAEAAAD4//3/AQABAAEAAAD4//7/AQABAAEAAAD4////AQABAAEAAAD4/wAAAQABAAEAAAD4/wEAAQABAAEAAAD4/wIAAQABAAEAAAD4/wMAAQABAAEAAAD4/wQAAQABAAEAAAD5//b/AQABAAEAAAD5//f/AQABAAEAAAD5//j/AQABAAEAAAD5//n/AQABAAEAAAD5//r/AQABAAEAAAD5//v/AQABAAEAAAD5//z/AQABAAEAAAD5//3/AQABAAEAAAD5//7/AQABAAEAAAD5////AQABAAEAAAD5/wAAAQABAAEAAAD5/wEAAQABAAEAAAD5/wIAAQABAAEAAAD5/wMAAQABAAEAAAD5/wQAAQABAAEAAAD6//b/AQABAAEAAAD6//f/AQABAAEAAAD6//j/AQABAAEAAAD6//n/AQABAAEAAAD6//r/AQABAAEAAAD6//v/AQABAAEAAAD6//z/AQABAAEAAAD6//3/AQABAAEAAAD6//7/AQABAAEAAAD6////AQABAAEAAAD6/wAAAQABAAEAAAD6/wEAAQABAAEAAAD6/wIAAQABAAEAAAD6/wMAAQABAAEAAAD6/wQAAQABAAEAAAD7//b/AQABAAEAAAD7//f/AQABAAEAAAD7//j/AQABAAEAAAD7//n/AQABAAEAAAD7//r/AQABAAEAAAD7//v/AQABAAEAAAD7//z/AQABAAEAAAD7//3/AQABAAEAAAD7//7/AQABAAEAAAD7////AQABAAEAAAD7/wAAAQABAAEAAAD7/wEAAQABAAEAAAD7/wIAAQABAAEAAAD7/wMAAQABAAEAAAD7/wQAAQABAAEAAAD8//b/AQABAAEAAAD8//f/AQABAAEAAAD8//j/AQABAAEAAAD8//n/AQABAAEAAAD8//r/AQABAAEAAAD8//v/AQABAAEAAAD8//z/AQABAAEAAAD8//3/AQABAAEAAAD8//7/AQABAAEAAAD8////AQABAAEAAAD8/wAAAQABAAEAAAD8/wEAAQABAAEAAAD8/wIAAQABAAEAAAD8/wMAAQABAAEAAAD9//b/AQABAAEAAAD9//f/AQABAAEAAAD9//j/AQABAAEAAAD9//n/AQABAAEAAAD9//r/AQABAAEAAAD9//v/AQACAAEAAAD9//z/AQACAAEAAADw/wQAAQABAAEAAADw/wUAAQABAAEAAADw/wYAAQABAAEAAADw/wcAAQABAAEAAADw/wgAAQABAAEAAADw/wkAAQABAAEAAADw/woAAQABAAEAAADw/wsAAQABAAEAAADw/wwAAQABAAEAAADw/w0AAQABAAEAAADw/w4AAQABAAEAAADx/wQAAQABAAEAAADx/wUAAQABAAEAAADx/wYAAQABAAEAAADx/wcAAQABAAEAAADx/wgAAQABAAEAAADx/wkAAQABAAEAAADx/woAAQABAAEAAADx/wsAAQABAAEAAADx/wwAAQABAAEAAADx/w0AAQABAAEAAADx/w4AAQABAAEAAADy/wQAAQABAAEAAADy/wUAAQABAAEAAADy/wYAAQABAAEAAADy/wcAAQABAAEAAADy/wgAAQABAAEAAADy/wkAAQABAAEAAADy/woAAQABAAEAAADy/wsAAQABAAEAAADy/wwAAQABAAEAAADy/w0AAQABAAEAAADy/w4AAQABAAEAAADz/wQAAQABAAEAAADz/wUAAQABAAEAAADz/wYAAQABAAEAAADz/wcAAQABAAEAAADz/wgAAQABAAEAAADz/wkAAQABAAEAAADz/woAAQABAAEAAADz/wsAAQABAAEAAADz/wwAAQABAAEAAADz/w0AAQABAAEAAADz/w4AAQABAAEAAAD0/wQAAQABAAEAAAD0/wUAAQABAAEAAAD0/wYAAQABAAEAAAD0/wcAAQABAAEAAAD0/wgAAQABAAEAAAD0/wkAAQABAAEAAAD0/woAAQABAAEAAAD0/wsAAQABAAEAAAD0/wwAAQABAAEAAAD0/w0AAQABAAEAAAD0/w4AAQABAAEAAAD1/wUAAQABAAEAAAD1/wYAAQABAAEAAAD1/wcAAQABAAEAAAD1/wgAAQABAAEAAAD1/wkAAQABAAEAAAD1/woAAQABAAEAAAD1/wsAAQABAAEAAAD1/wwAAQABAAEAAAD1/w0AAQABAAEAAAD1/w4AAQABAAEAAAD2/wUAAQABAAEAAAD2/wYAAQABAAEAAAD2/wcAAQABAAEAAAD2/wgAAQABAAEAAAD2/wkAAQABAAEAAAD2/woAAQABAAEAAAD2/wsAAQABAAEAAAD2/wwAAQABAAEAAAD2/w0AAQABAAEAAAD2/w4AAQABAAEAAAD3/wUAAQABAAEAAAD3/wYAAQABAAEAAAD3/wcAAQABAAEAAAD3/wgAAQABAAEAAAD3/wkAAQABAAEAAAD3/woAAQABAAEAAAD3/wsAAQABAAEAAAD3/wwAAQABAAEAAAD3/w0AAQABAAEAAAD3/w4AAQABAAEAAAD4/wUAAQABAAEAAAD4/wYAAQABAAEAAAD4/wcAAQABAAEAAAD4/wgAAQABAAEAAAD4/wkAAQABAAEAAAD4/woAAQABAAEAAAD4/wsAAQABAAEAAAD4/wwAAQABAAEAAAD4/w0AAQABAAEAAAD4/w4AAQABAAEAAAD5/wUAAQABAAEAAAD5/wYAAQABAAEAAAD5/wcAAQABAAEAAAD5/wgAAQABAAEAAAD5/wkAAQABAAEAAAD5/woAAQABAAEAAAD5/wsAAQABAAEAAAD5/wwAAQABAAEAAAD5/w0AAQABAAEAAAD5/w4AAQABAAEAAAD6/wUAAQABAAEAAAD6/wYAAQABAAEAAAD6/wcAAQABAAEAAAD6/wgAAQABAAEAAAD6/wkAAQABAAEAAAD6/woAAQABAAEAAAD6/wsAAQABAAEAAAD6/wwAAQABAAEAAAD6/w0AAQABAAEAAAD6/w4AAQABAAEAAAD7/woAAQABAAEAAAD7/wsAAQABAAEAAAD7/wwAAQABAAEAAAD7/w0AAQABAAEAAAD7/w4AAQABAAEAAADw//b/AQABAAEAAADw//f/AQABAAEAAADw//j/AQABAAEAAADw//n/AQABAAEAAADw//r/AQABAAEAAADw//v/AQABAAEAAADw//z/AQABAAEAAADw//3/AQABAAEAAADw//7/AQABAAEAAADw////AQABAAEAAADw/wAAAQABAAEAAADw/wEAAQABAAEAAADw/wIAAQABAAEAAADw/wMAAQABAAEAAADx//b/AQABAAEAAADx//f/AQABAAEAAADx//j/AQABAAEAAADx//n/AQABAAEAAADx//r/AQABAAEAAADx//v/AQABAAEAAADx//z/AQABAAEAAADx//3/AQABAAEAAADx//7/AQABAAEAAADx////AQABAAEAAADx/wAAAQABAAEAAADx/wEAAQABAAEAAADx/wIAAQABAAEAAADx/wMAAQABAAEAAADy//b/AQABAAEAAADy//f/AQABAAEAAADy//j/AQABAAEAAADy//n/AQABAAEAAADy//r/AQABAAEAAADy//v/AQABAAEAAADy//z/AQABAAEAAADy//3/AQABAAEAAADy//7/AQABAAEAAADy////AQABAAEAAADy/wAAAQABAAEAAADy/wEAAQABAAEAAADy/wIAAQABAAEAAADy/wMAAQABAAEAAADz//b/AQABAAEAAADz//f/AQABAAEAAADz//j/AQABAAEAAADz//n/AQABAAEAAADz//r/AQABAAEAAADz//v/AQABAAEAAADz//z/AQABAAEAAADz//3/AQABAAEAAADz//7/AQABAAEAAADz////AQABAAEAAADz/wAAAQABAAEAAADz/wEAAQABAAEAAADz/wIAAQABAAEAAADz/wMAAQABAAEAAAD0//b/AQABAAEAAAD0//f/AQABAAEAAAD0//j/AQABAAEAAAD0//n/AQABAAEAAAD0//r/AQABAAEAAAD0//v/AQABAAEAAAD0//z/AQABAAEAAAD0//3/AQABAAEAAAD0//7/AQABAAEAAAD0////AQABAAEAAAD0/wAAAQABAAEAAAD0/wEAAQABAAEAAAD0/wIAAQABAAEAAAD0/wMAAQABAAEAAADv//D/AQABAAEAAADv//H/AQABAAEAAADv//L/AQABAAEAAADv//P/AQABAAEAAADv//T/AQABAAEAAADv//X/AQABAAEAAADv//b/AQABAAEAAADw//D/AQABAAEAAADw//H/AQABAAEAAADw//L/AQABAAEAAADw//P/AQABAAEAAADw//T/AQABAAEAAADw//X/AQABAAEAAADx//D/AQABAAEAAADx//H/AQABAAEAAADx//L/AQABAAEAAADx//P/AQABAAEAAADx//T/AQABAAEAAADx//X/AQABAAEAAADy//D/AQABAAEAAADy//H/AQABAAEAAADy//L/AQABAAEAAADy//P/AQABAAEAAADy//T/AQABAAEAAADy//X/AQABAAEAAADz//D/AQABAAEAAADz//H/AQABAAEAAADz//L/AQABAAEAAADz//P/AQABAAEAAADz//T/AQABAAEAAADz//X/AQABAAEAAAD0//D/AQABAAEAAAD0//H/AQABAAEAAAD0//L/AQABAAEAAAD0//P/AQABAAEAAAD0//T/AQABAAEAAAD0//X/AQABAAEAAAD1//D/AQABAAEAAAD1//H/AQABAAEAAAD1//L/AQABAAEAAAD1//P/AQABAAEAAAD1//T/AQABAAEAAAD1//X/AQABAAEAAAD2//D/AQABAAEAAAD2//H/AQABAAEAAAD2//L/AQABAAEAAAD2//P/AQABAAEAAAD2//T/AQABAAEAAAD2//X/AQABAAEAAAD3//D/AQABAAEAAAD3//H/AQABAAEAAAD3//L/AQABAAEAAAD3//P/AQABAAEAAAD3//T/AQABAAEAAAD3//X/AQABAAEAAAD4//D/AQABAAEAAAD4//H/AQABAAEAAAD4//L/AQABAAEAAAD4//P/AQABAAEAAAD4//T/AQABAAEAAAD4//X/AQABAAEAAAD5//D/AQABAAEAAAD5//H/AQABAAEAAAD5//L/AQABAAEAAAD5//P/AQABAAEAAAD5//T/AQABAAEAAAD5//X/AQABAAEAAAD6//D/AQABAAEAAAD6//H/AQABAAEAAAD6//L/AQABAAEAAAD6//P/AQABAAEAAAD6//T/AQABAAEAAAD6//X/AQABAAEAAAD7//D/AQABAAEAAAD7//H/AQABAAEAAAD7//L/AQABAAEAAAD7//P/AQABAAEAAAD7//T/AQABAAEAAAD7//X/AQABAAEAAAD8//D/AQABAAEAAAD8//H/AQABAAEAAAD8//L/AQABAAEAAAD8//P/AQABAAEAAAD8//T/AQABAAEAAAD8//X/AQABAAEAAAD9//D/AQABAAEAAAD9//H/AQABAAEAAAD9//L/AQABAAEAAAD9//P/AQABAAEAAAD9//T/AQABAAEAAAD9//X/AQABAAEAAAD5/+//AQABAAEAAAD6/+//AQABAAEAAAD7/+//AQABAAEAAAD8/+//AQABAAEAAAD9/+//AQABAAEAAAD+/+//AQABAAEAAAD+//D/AQABAAEAAAD+//H/AQABAAEAAAD+//L/AQABAAEAAAD+//P/AQABAAEAAAD+//T/AQABAAEAAAD+//X/AQABAAEAAAD+//b/AQABAAEAAAD+//f/AQABAAEAAAD+//j/AQABAAEAAAD+//n/AQABAAEAAAD+//r/AQABAAIAAAD//+//AQABAAEAAAD///D/AQABAAEAAAD///H/AQABAAEAAAD///L/AQABAAEAAAD///P/AQABAAEAAAD///T/AQABAAEAAAD///X/AQABAAEAAAD///b/AQABAAEAAAD///f/AQABAAEAAAD///j/AQABAAEAAAD///n/AQABAAEAAAD///r/AQABAAIAAAAAAO//AQABAAEAAAAAAPD/AQABAAEAAAAAAPH/AQABAAEAAAAAAPL/AQABAAEAAAAAAPP/AQABAAEAAAAAAPT/AQABAAEAAAAAAPX/AQABAAEAAAAAAPb/AQABAAEAAAAAAPf/AQABAAEAAAAAAPj/AQABAAEAAAAAAPn/AQABAAEAAAAAAPr/AQABAAIAAAABAO//AQABAAEAAAABAPD/AQABAAEAAAABAPH/AQABAAEAAAABAPL/AQABAAEAAAABAPP/AQABAAEAAAABAPT/AQABAAEAAAABAPX/AQABAAEAAAABAPb/AQABAAEAAAABAPf/AQABAAEAAAABAPj/AQABAAEAAAABAPn/AQABAAEAAAACAO//AQABAAEAAAACAPD/AQABAAEAAAACAPH/AQABAAEAAAACAPL/AQABAAEAAAACAPP/AQABAAEAAAACAPT/AQABAAEAAAACAPX/AQABAAEAAAACAPb/AQABAAEAAAACAPf/AQABAAEAAAACAPj/AQABAAEAAAACAPn/AQABAAIAAAADAO//AQABAAEAAAADAPD/AQABAAEAAAADAPH/AQABAAEAAAADAPL/AQABAAEAAAADAPP/AQABAAEAAAADAPT/AQABAAEAAAADAPX/AQABAAEAAAADAPb/AQABAAEAAAADAPf/AQABAAEAAAADAPj/AQABAAEAAAADAPn/AQABAAIAAAAEAO//AQABAAEAAAAEAPD/AQABAAEAAAAEAPH/AQABAAEAAAAEAPL/AQABAAEAAAAEAPP/AQABAAEAAAAEAPT/AQABAAEAAAAEAPX/AQABAAEAAAAEAPb/AQABAAEAAAAEAPf/AQABAAEAAAAEAPj/AQABAAEAAAAEAPn/AQABAAIAAAAFAO//AQABAAEAAAAFAPD/AQABAAEAAAAFAPH/AQABAAEAAAAFAPL/AQABAAEAAAAFAPP/AQABAAEAAAAFAPT/AQABAAEAAAAFAPX/AQABAAEAAAAFAPb/AQABAAEAAAAFAPf/AQABAAEAAAAFAPj/AQABAAEAAAAFAPn/AQABAAIAAAAGAO//AQABAAEAAAAGAPD/AQABAAEAAAAGAPH/AQABAAEAAAAGAPL/AQABAAEAAAAGAPP/AQABAAEAAAAGAPT/AQABAAEAAAAGAPX/AQABAAEAAAAGAPb/AQABAAEAAAAGAPf/AQABAAEAAAAGAPj/AQABAAEAAAAGAPn/AQABAAIAAAAHAO//AQABAAEAAAAHAPD/AQABAAEAAAAHAPH/AQABAAEAAAAHAPL/AQABAAEAAAAHAPP/AQABAAEAAAAHAPT/AQABAAEAAAAHAPX/AQABAAEAAAAHAPb/AQABAAEAAAAHAPf/AQABAAEAAAAHAPj/AQABAAEAAAAHAPn/AQABAAIAAAAIAO//AQABAAEAAAAIAPD/AQABAAEAAAAIAPH/AQABAAEAAAAIAPL/AQABAAEAAAAIAPP/AQABAAEAAAAIAPT/AQABAAEAAAAIAPX/AQABAAEAAAAIAPb/AQABAAEAAAAIAPf/AQABAAEAAAAIAPj/AQABAAEAAAAIAPn/AQABAAIAAAAJAO//AQABAAEAAAAJAPD/AQABAAEAAAAJAPH/AQABAAEAAAAJAPL/AQABAAEAAAAJAPP/AQABAAEAAAAJAPT/AQABAAEAAAAJAPX/AQABAAEAAAAJAPb/AQABAAEAAAAJAPf/AQABAAEAAAAJAPj/AQABAAEAAAAJAPn/AQABAAIAAAAKAO//AQABAAEAAAAKAPD/AQABAAEAAAAKAPH/AQABAAEAAAAKAPL/AQABAAEAAAAKAPP/AQABAAEAAAAKAPT/AQABAAEAAAAKAPX/AQABAAEAAAAKAPb/AQABAAEAAAAKAPf/AQABAAEAAAAKAPj/AQABAAEAAAALAO//AQABAAEAAAALAPD/AQABAAEAAAALAPH/AQABAAEAAAALAPL/AQABAAEAAAALAPP/AQABAAEAAAALAPT/AQABAAEAAAALAPX/AQABAAEAAAALAPb/AQABAAEAAAALAPf/AQABAAEAAAALAPj/AQABAAEAAAALAPn/AQABAAEAAAALAPr/AQABAAEAAAALAPv/AQABAAEAAAAMAO//AQABAAEAAAAMAPD/AQABAAEAAAAMAPH/AQABAAEAAAAMAPL/AQABAAEAAAAMAPP/AQABAAEAAAAMAPT/AQABAAEAAAAMAPX/AQABAAEAAAAMAPb/AQABAAEAAAAMAPf/AQABAAEAAAAMAPj/AQABAAEAAAAMAPn/AQABAAEAAAAMAPr/AQABAAEAAAAMAPv/AQABAAEAAAANAO//AQABAAEAAAANAPD/AQABAAEAAAANAPH/AQABAAEAAAANAPL/AQABAAEAAAANAPP/AQABAAEAAAANAPT/AQABAAEAAAANAPX/AQABAAEAAAANAPb/AQABAAEAAAANAPf/AQABAAEAAAANAPj/AQABAAEAAAANAPn/AQABAAEAAAANAPr/AQABAAEAAAANAPv/AQABAAEAAAAOAO//AQABAAEAAAAOAPD/AQABAAEAAAAOAPH/AQABAAEAAAAOAPL/AQABAAEAAAAOAPP/AQABAAEAAAAOAPT/AQABAAEAAAAOAPX/AQABAAEAAAAOAPb/AQABAAEAAAAOAPf/AQABAAEAAAAOAPj/AQABAAEAAAAOAPn/AQABAAEAAAAOAPr/AQABAAEAAAAOAPv/AQABAAEAAAAPAO//AQABAAEAAAAPAPD/AQABAAEAAAAPAPH/AQABAAEAAAAPAPL/AQABAAEAAAAPAPP/AQABAAEAAAAPAPT/AQABAAEAAAAPAPX/AQABAAEAAAAPAPb/AQABAAEAAAAPAPf/AQABAAEAAAAPAPj/AQABAAEAAAAPAPn/AQABAAEAAAAPAPr/AQABAAEAAAAPAPv/AQABAAEAAAD6/w8AAQABAAEAAAD6/xAAAQABAAEAAAD6/xEAAQABAAEAAAD6/xIAAQABAAEAAAD6/xMAAQABAAEAAAD7/w8AAQABAAEAAAD7/xAAAQABAAEAAAD7/xEAAQABAAEAAAD7/xIAAQABAAEAAAD7/xMAAQABAAEAAAD8/woAAQABAAEAAAD8/wsAAQABAAEAAAD8/wwAAQABAAEAAAD8/w0AAQABAAEAAAD8/w4AAQABAAEAAAD8/w8AAQABAAEAAAD8/xAAAQABAAEAAAD8/xEAAQABAAEAAAD8/xIAAQABAAEAAAD8/xMAAQABAAEAAAD9/woAAQABAAEAAAD9/wsAAQABAAEAAAD9/wwAAQABAAEAAAD9/w0AAQABAAEAAAD9/w4AAQABAAEAAAD9/w8AAQABAAEAAAD9/xAAAQABAAEAAAD9/xEAAQABAAEAAAD9/xIAAQABAAEAAAD9/xMAAQABAAEAAAD+/woAAQABAAEAAAD+/wsAAQABAAEAAAD+/wwAAQABAAEAAAD+/w0AAQABAAEAAAD+/w4AAQABAAEAAAD+/w8AAQABAAEAAAD+/xAAAQABAAEAAAD+/xEAAQABAAEAAAD+/xIAAQABAAEAAAD+/xMAAQABAAEAAAD//woAAQABAAEAAAD//wsAAQABAAEAAAD//wwAAQABAAEAAAD//w0AAQABAAEAAAD//w4AAQABAAEAAAD//w8AAQABAAEAAAD//xAAAQABAAEAAAD//xEAAQABAAEAAAD//xIAAQABAAEAAAD//xMAAQABAAEAAAAAAAoAAQABAAEAAAAAAAsAAQABAAEAAAAAAAwAAQABAAEAAAAAAA0AAQABAAEAAAAAAA4AAQABAAEAAAAAAA8AAQABAAEAAAAAABAAAQABAAEAAAAAABEAAQABAAEAAAAAABIAAQABAAEAAAAAABMAAQABAAEAAAABAAoAAQABAAEAAAABAAsAAQABAAEAAAABAAwAAQABAAEAAAABAA0AAQABAAEAAAABAA4AAQABAAEAAAABAA8AAQABAAEAAAABABAAAQABAAEAAAABABEAAQABAAEAAAABABIAAQABAAEAAAABABMAAQABAAEAAAACAAoAAQABAAEAAAACAAsAAQABAAEAAAACAAwAAQABAAEAAAACAA0AAQABAAEAAAACAA4AAQABAAEAAAACAA8AAQABAAEAAAACABAAAQABAAEAAAACABEAAQABAAEAAAACABIAAQABAAEAAAACABMAAQABAAEAAAADAAoAAQABAAEAAAADAAsAAQABAAEAAAADAAwAAQABAAEAAAADAA0AAQABAAEAAAADAA4AAQABAAEAAAADAA8AAQABAAEAAAADABAAAQABAAEAAAADABEAAQABAAEAAAADABIAAQABAAEAAAADABMAAQABAAEAAAAEAAoAAQABAAEAAAAEAAsAAQABAAEAAAAEAAwAAQABAAEAAAAEAA0AAQABAAEAAAAEAA4AAQABAAEAAAAEAA8AAQABAAEAAAAEABAAAQABAAEAAAAEABEAAQABAAEAAAAEABIAAQABAAEAAAAEABMAAQABAAEAAAAFAAoAAQABAAEAAAAFAAsAAQABAAEAAAAFAAwAAQABAAEAAAAFAA0AAQABAAEAAAAFAA4AAQABAAEAAAAFAA8AAQABAAEAAAAFABAAAQABAAEAAAAFABEAAQABAAEAAAAFABIAAQABAAEAAAAFABMAAQABAAEAAAAGAAoAAQABAAEAAAAGAAsAAQABAAEAAAAGAAwAAQABAAEAAAAGAA0AAQABAAEAAAAGAA4AAQABAAEAAAAGAA8AAQABAAEAAAAGABAAAQABAAEAAAAGABEAAQABAAEAAAAGABIAAQABAAEAAAAGABMAAQABAAEAAAAHAAoAAQABAAEAAAAHAAsAAQABAAEAAAAHAAwAAQABAAEAAAAHAA0AAQABAAEAAAAHAA4AAQABAAEAAAAHAA8AAQABAAEAAAAHABAAAQABAAEAAAAHABEAAQABAAEAAAAHABIAAQABAAEAAAAHABMAAQABAAEAAAAIAAoAAQABAAEAAAAIAAsAAQABAAEAAAAIAAwAAQABAAEAAAAIAA0AAQABAAEAAAAIAA4AAQABAAEAAAAIAA8AAQABAAEAAAAIABAAAQABAAEAAAAIABEAAQABAAEAAAAIABIAAQABAAEAAAAIABMAAQABAAEAAAAJAAoAAQABAAEAAAAJAAsAAQABAAEAAAAJAAwAAQABAAEAAAAJAA0AAQABAAEAAAAJAA4AAQABAAEAAAAJAA8AAQABAAEAAAAJABAAAQABAAEAAAAJABEAAQABAAEAAAAJABIAAQABAAEAAAAJABMAAQABAAEAAAAKAAoAAQABAAEAAAAKAAsAAQABAAEAAAAKAAwAAQABAAEAAAAKAA0AAQABAAEAAAAKAA4AAQABAAEAAAAKAA8AAQABAAEAAAAKABAAAQABAAEAAAAKABEAAQABAAEAAAAKABIAAQABAAEAAAAKABMAAQABAAEAAAALAAoAAQABAAEAAAALAAsAAQABAAEAAAALAAwAAQABAAEAAAALAA0AAQABAAEAAAALAA4AAQABAAEAAAALAA8AAQABAAEAAAALABAAAQABAAEAAAALABEAAQABAAEAAAALABIAAQABAAEAAAALABMAAQABAAEAAAAMAAkAAQABAAEAAAAMAAoAAQABAAEAAAAMAAsAAQABAAEAAAAMAAwAAQABAAEAAAAMAA0AAQABAAEAAAAMAA4AAQABAAEAAAAMAA8AAQABAAEAAAAMABAAAQABAAEAAAAMABEAAQABAAEAAAAMABIAAQABAAEAAAAMABMAAQABAAEAAAALAPz/AQABAAEAAAALAP3/AQABAAEAAAALAP7/AQABAAEAAAALAP//AQABAAEAAAALAAAAAQABAAEAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAALAAUAAQABAAEAAAALAAYAAQABAAEAAAALAAcAAQABAAEAAAALAAgAAQABAAEAAAAMAPz/AQABAAEAAAAMAP3/AQABAAEAAAAMAP7/AQABAAEAAAAMAP//AQABAAEAAAAMAAAAAQABAAEAAAAMAAEAAQABAAEAAAAMAAIAAQABAAEAAAAMAAMAAQABAAEAAAAMAAQAAQABAAEAAAAMAAUAAQABAAEAAAAMAAYAAQABAAEAAAAMAAcAAQABAAEAAAAMAAgAAQABAAEAAAANAPz/AQABAAEAAAANAP3/AQABAAEAAAANAP7/AQABAAEAAAANAP//AQABAAEAAAANAAAAAQABAAEAAAANAAEAAQABAAEAAAANAAIAAQABAAEAAAANAAMAAQABAAEAAAANAAQAAQABAAEAAAANAAUAAQABAAEAAAANAAYAAQABAAEAAAANAAcAAQABAAEAAAANAAgAAQABAAEAAAANAAkAAQABAAEAAAANAAoAAQABAAEAAAANAAsAAQABAAEAAAANAAwAAQABAAEAAAANAA0AAQABAAEAAAANAA4AAQABAAEAAAANAA8AAQABAAEAAAANABAAAQABAAEAAAANABEAAQABAAEAAAANABIAAQABAAEAAAANABMAAQABAAEAAAAOAPz/AQABAAEAAAAOAP3/AQABAAEAAAAOAP7/AQABAAEAAAAOAP//AQABAAEAAAAOAAAAAQABAAEAAAAOAAEAAQABAAEAAAAOAAIAAQABAAEAAAAOAAMAAQABAAEAAAAOAAQAAQABAAEAAAAOAAUAAQABAAEAAAAOAAYAAQABAAEAAAAOAAcAAQABAAEAAAAOAAgAAQABAAEAAAAOAAkAAQABAAEAAAAOAAoAAQABAAEAAAAOAAsAAQABAAEAAAAOAAwAAQABAAEAAAAOAA0AAQABAAEAAAAOAA4AAQABAAEAAAAOAA8AAQABAAEAAAAOABAAAQABAAEAAAAOABEAAQABAAEAAAAOABIAAQABAAEAAAAOABMAAQABAAEAAAAPAPz/AQABAAEAAAAPAP3/AQABAAEAAAAPAP7/AQABAAEAAAAPAP//AQABAAEAAAAPAAAAAQABAAEAAAAPAAEAAQABAAEAAAAPAAIAAQABAAEAAAAPAAMAAQABAAEAAAAPAAQAAQABAAEAAAAPAAUAAQABAAEAAAAPAAYAAQABAAEAAAAPAAcAAQABAAEAAAAPAAgAAQABAAEAAAAPAAkAAQABAAEAAAAPAAoAAQABAAEAAAAPAAsAAQABAAEAAAAPAAwAAQABAAEAAAAPAA0AAQABAAEAAAAPAA4AAQABAAEAAAAPAA8AAQABAAEAAAAPABAAAQABAAEAAAAPABEAAQABAAEAAAAPABIAAQABAAEAAAAPABMAAQABAAEAAAAQAPz/AQABAAEAAAAQAP3/AQABAAEAAAAQAP7/AQABAAEAAAAQAP//AQABAAEAAAAQAAAAAQABAAEAAAAQAAEAAQABAAEAAAAQAAIAAQABAAEAAAAQAAMAAQABAAEAAAAQAAQAAQABAAEAAAAQAAUAAQABAAEAAAAQAAYAAQABAAEAAAAQAAcAAQABAAEAAAAQAAgAAQABAAEAAAAQAAkAAQABAAEAAAAQAAoAAQABAAEAAAAQAAsAAQABAAEAAAAQAAwAAQABAAEAAAAQAA0AAQABAAEAAAAQAA4AAQABAAEAAAAQAA8AAQABAAEAAAAQABAAAQABAAEAAAAQABEAAQABAAEAAAAQABIAAQABAAEAAAAQABMAAQABAAEAAAARAPz/AQABAAEAAAARAP3/AQABAAEAAAARAP7/AQABAAEAAAARAP//AQABAAEAAAARAAAAAQABAAEAAAARAAEAAQABAAEAAAARAAIAAQABAAEAAAARAAMAAQABAAEAAAARAAQAAQABAAEAAAARAAUAAQABAAEAAAARAAYAAQABAAEAAAARAAcAAQABAAEAAAARAAgAAQABAAEAAAARAAkAAQABAAEAAAARAAoAAQABAAEAAAARAAsAAQABAAEAAAARAAwAAQABAAEAAAARAA0AAQABAAEAAAARAA4AAQABAAEAAAARAA8AAQABAAEAAAARABAAAQABAAEAAAARABEAAQABAAEAAAARABIAAQABAAEAAAARABMAAQABAAEAAAASAPz/AQABAAEAAAASAP3/AQABAAEAAAASAP7/AQABAAEAAAASAP//AQABAAEAAAASAAAAAQABAAEAAAASAAEAAQABAAEAAAASAAIAAQABAAEAAAASAAMAAQABAAEAAAASAAQAAQABAAEAAAASAAUAAQABAAEAAAASAAYAAQABAAEAAAASAAcAAQABAAEAAAASAAgAAQABAAEAAAASAAkAAQABAAEAAAASAAoAAQABAAEAAAASAAsAAQABAAEAAAASAAwAAQABAAEAAAASAA0AAQABAAEAAAASAA4AAQABAAEAAAASAA8AAQABAAEAAAASABAAAQABAAEAAAASABEAAQABAAEAAAASABIAAQABAAEAAAASABMAAQABAAEAAAATAPz/AQABAAEAAAATAP3/AQABAAEAAAATAP7/AQABAAEAAAATAP//AQABAAEAAAATAAAAAQABAAEAAAATAAEAAQABAAEAAAATAAIAAQABAAEAAAATAAMAAQABAAEAAAATAAQAAQABAAEAAAATAAUAAQABAAEAAAATAAYAAQABAAEAAAATAAcAAQABAAEAAAATAAgAAQABAAEAAAATAAkAAQABAAEAAAATAAoAAQABAAEAAAATAAsAAQABAAEAAAATAAwAAQABAAEAAAATAA0AAQABAAEAAAATAA4AAQABAAEAAAATAA8AAQABAAEAAAATABAAAQABAAEAAAATABEAAQABAAEAAAATABIAAQABAAEAAAATABMAAQABAAEAAAAUAPz/AQABAAEAAAAUAP3/AQABAAEAAAAUAP7/AQABAAEAAAAUAP//AQABAAEAAAAUAAAAAQABAAEAAAAUAAEAAQABAAEAAAAUAAIAAQABAAEAAAAUAAMAAQABAAEAAAAUAAQAAQABAAEAAAAUAAUAAQABAAEAAAAUAAYAAQABAAEAAAAUAAcAAQABAAEAAAAUAAgAAQABAAEAAAAUAAkAAQABAAEAAAAUAAoAAQABAAEAAAAUAAsAAQABAAEAAAAUAAwAAQABAAEAAAAUAA0AAQABAAEAAAAUAA4AAQABAAEAAAAUAA8AAQABAAEAAAAUABAAAQABAAEAAAAUABEAAQABAAEAAAAUABIAAQABAAEAAAAUABMAAQABAAEAAAAQAO//AQABAAEAAAAQAPD/AQABAAEAAAAQAPH/AQABAAEAAAAQAPL/AQABAAEAAAAQAPP/AQABAAEAAAAQAPT/AQABAAEAAAAQAPX/AQABAAEAAAAQAPb/AQABAAEAAAAQAPf/AQABAAEAAAAQAPj/AQABAAEAAAAQAPn/AQABAAEAAAAQAPr/AQABAAEAAAAQAPv/AQABAAEAAAARAO//AQABAAEAAAARAPD/AQABAAEAAAARAPH/AQABAAEAAAARAPL/AQABAAEAAAARAPP/AQABAAEAAAARAPT/AQABAAEAAAARAPX/AQABAAEAAAARAPb/AQABAAEAAAARAPf/AQABAAEAAAARAPj/AQABAAEAAAARAPn/AQABAAEAAAARAPr/AQABAAEAAAARAPv/AQABAAEAAAASAO//AQABAAEAAAASAPD/AQABAAEAAAASAPH/AQABAAEAAAASAPL/AQABAAEAAAASAPP/AQABAAEAAAASAPT/AQABAAEAAAASAPX/AQABAAEAAAASAPb/AQABAAEAAAASAPf/AQABAAEAAAASAPj/AQABAAEAAAASAPn/AQABAAEAAAASAPr/AQABAAEAAAASAPv/AQABAAEAAAATAO//AQABAAEAAAATAPD/AQABAAEAAAATAPH/AQABAAEAAAATAPL/AQABAAEAAAATAPP/AQABAAEAAAATAPT/AQABAAEAAAATAPX/AQABAAEAAAATAPb/AQABAAEAAAATAPf/AQABAAEAAAATAPj/AQABAAEAAAATAPn/AQABAAEAAAATAPr/AQABAAEAAAATAPv/AQABAAEAAAAUAO//AQABAAEAAAAUAPD/AQABAAEAAAAUAPH/AQABAAEAAAAUAPL/AQABAAEAAAAUAPP/AQABAAEAAAAUAPT/AQABAAEAAAAUAPX/AQABAAEAAAAUAPb/AQABAAEAAAAUAPf/AQABAAEAAAAUAPj/AQABAAEAAAAUAPn/AQABAAEAAAAUAPr/AQABAAEAAAAUAPv/AQABAAEAAAAVAO//AQABAAEAAAAVAPD/AQABAAEAAAAVAPH/AQABAAEAAAAVAPL/AQABAAEAAAAVAPP/AQABAAEAAAAVAPT/AQABAAEAAAAVAPX/AQABAAEAAAAVAPb/AQABAAEAAAAVAPf/AQABAAEAAAAVAPj/AQABAAEAAAAVAPn/AQABAAEAAAAVAPr/AQABAAEAAAAVAPv/AQABAAEAAAAVAPz/AQABAAEAAAD9/wUAAQABAAIAAAD9/wQAAQACAAEAAAD8/wUAAQABAAEAAAD8/wQAAQABAAEAAAA=")
tile_set = SubResource("TileSet_m46y1")

[node name="walls" type="TileMapLayer" parent="Ground/TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD9//7/AAAAAAIAAAD9////AAAAAAIAAAD9/wAAAAAAAAIAAAD9/wEAAAAAAAIAAAD9//3/AAAAAAIAAAD9/wIAAAAAAAIAAAD9/wMAAAAAAAIAAAD9/wQAAAAAAAIAAAD9/wUAAAACAAIAAAD8/wUAAAABAAAAAAD7/wUAAAABAAEAAAD7/wYAAAAAAAIAAAD7/wcAAAAAAAIAAAD7/wgAAAAAAAIAAAD7/wkAAAABAAIAAAD8/wkAAAABAAAAAAD9/wkAAAABAAAAAAD//wkAAAABAAAAAAD+/wkAAAABAAAAAAAAAAkAAAABAAAAAAABAAkAAAABAAAAAAACAAkAAAABAAAAAAADAAkAAAABAAAAAAAEAAkAAAABAAAAAAAFAAkAAAABAAAAAAAGAAkAAAABAAAAAAAHAAkAAAABAAAAAAAJAAkAAAABAAAAAAAIAAkAAAABAAAAAAAKAAkAAAACAAIAAAAKAAgAAAAAAAIAAAAKAAcAAAAAAAIAAAAKAAYAAAAAAAIAAAAKAAUAAAAAAAIAAAAKAAQAAAAAAAIAAAAKAAMAAAAAAAIAAAAKAAIAAAAAAAIAAAAKAAEAAAAAAAIAAAAKAAAAAAAAAAIAAAAKAP//AAAAAAIAAAAKAP7/AAAAAAIAAAAKAP3/AAAAAAIAAAAKAPz/AAAAAAIAAAAKAPv/AAAAAAIAAAAKAPr/AAACAAEAAAAJAPr/AAABAAAAAAAHAPr/AAABAAAAAAAGAPr/AAABAAAAAAAFAPr/AAABAAAAAAAIAPr/AAABAAAAAAA=")
tile_set = SubResource("TileSet_m46y1")

[node name="Gate" parent="." instance=ExtResource("3_u66c0")]
position = Vector2(547, -230)

[node name="Porjectiles" type="Node2D" parent="."]

[node name="House" parent="." instance=ExtResource("11_ifkjs")]
position = Vector2(1271, 1457)
rotation = -0.375246
scale = Vector2(0.6, 0.6)

[node name="Player" parent="." instance=ExtResource("4_aemo4")]
position = Vector2(404, 276)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[connection signal="player_enter_gate" from="Gate" to="." method="_on_gate_player_enter_gate"]
[connection signal="grenade_signal" from="Player" to="." method="_on_player_grenade_signal"]
[connection signal="laser_signal" from="Player" to="." method="_on_player_laser_signal"]
